SERVER-107567 Coverity analysis defect 175479: Parse warning (#38841)

GitOrigin-RevId: 11769765d4023c132363b9fda1615fd801cefb2f